# scamrecon

./: .env.example  README.md  README_REFACTORED.md  README_suspicious_domains.md  REFACTORING.md  USAGE.md  cloudflare_urls.txt  pyproject.toml  reverse_resolution_104_18_21_48.txt  reverse_resolution_72_52_4_119.txt  scamrecon.py
evidence/: reverse_resolution_104_18_20_48.txt
examples/: 17_03_2025_domains.csv  19_03_2025_domains.csv  README.md  analyze_and_report.sh  batch_process.py  capture_screenshot.py  cli_usage.sh  create_cloudflare_domain_list.py  example.csv  generate_suspicious_domains_list.py  integration_example.py  integration_workflow.sh  investigate_domain.py  network_104_21_31_200.json  refactored_example.py  report_cloudflare.py  report_fields.json  tech_detection.py
examples/results/: example.com_investigation.json
reports/suspicious_domains/: high_risk_domains.txt  suspicious_domains_analysis.json  suspicious_domains_summary.md  suspicious_group_1.txt  suspicious_group_10.txt  suspicious_group_11.txt  suspicious_group_12.txt  suspicious_group_13.txt  suspicious_group_14.txt  suspicious_group_15.txt  suspicious_group_16.txt  suspicious_group_17.txt  suspicious_group_18.txt  suspicious_group_19.txt  suspicious_group_2.txt  suspicious_group_20.txt  suspicious_group_21.txt  suspicious_group_22.txt  suspicious_group_23.txt  suspicious_group_24.txt  suspicious_group_25.txt  suspicious_group_26.txt  suspicious_group_27.txt  suspicious_group_28.txt  suspicious_group_29.txt  (+25 more)
scamrecon/: __init__.py
tests/: test_browser_manager.py  test_domain_utils.py
(+34 files in other folders)
